Issue #18091: Add Java 25 compilation to CircleCI